--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -53,7 +53,7 @@
   img:before {
     content: ' ';
     display: block;
-    position: absolute;
+    // position: absolute;
     height: 100%;
     width: 100%;
     @apply dark:bg-dark-secondary;
@@ -97,7 +97,7 @@
   }
 
   .trim-alt {
-    @apply overflow-hidden text-ellipsis break-all [display:-webkit-box] [-webkit-line-clamp:1] [-webkit-box-orient:vertical];
+    @apply overflow-hidden text-ellipsis break-all [-webkit-box-orient:vertical] [-webkit-line-clamp:1] [display:-webkit-box];
   }
 
   .hover-card {
